# Product-Services-Website

auth-service/: package-lock.json  package.json
auth-service/src/: app.ts  server.ts
notification-service/: package-lock.json  package.json
payment-service/: .air.toml  go.mod  go.sum
user_service/: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
user_service/api/: middleware.py  settings.py  urls.py
user_service/api/users/: models.py  urls.py  utils.py  views.py
user_service/api/users/migrations/: 0001_initial.py  0002_alter_student_school_id.py
user_service/api/users/views/: __init__.py  create.py  list.py
user_service/api/users/views/by_id/: __init__.py  delete.py  get.py  update.py
user_service/api/users/views/by_id/get/: handler.py  service.py  types.py
user_service/api/users/views/by_id/update/: handler.py  middleware.py  service.py  types.py
user_service/api/users/views/create/: __init__.py  handler.py  middleware.py  service.py  types.py  view.py
user_service/api/users/views/list/: handler.py  middleware.py  service.py  types.py
user_service/docs/: .env.example  flake.nix  index.html  main.tsp  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tspconfig.yaml
user_service/docs/src/: database.d2  dbdiagram.io.txt  env.ts  main.ts  main.tsp
user_service/docs/src/flows/: create-guardian.d2  create-school-admin.d2  create-student.d2  create-super-admin.d2
user_service/env/: pyvenv.cfg
user_service/env/Scripts/: activate  activate.bat
user_service/scripts/: codegen.sh
user_service/user_service/: settings.py
(+49 files in other folders)
